[gd_scene load_steps=4 format=3 uid="uid://drmdj4df5uwn7"]

[ext_resource type="Texture2D" uid="uid://bnjnwv1adqmky" path="res://Images/Resized_Images/Microwave_closed.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Objects/Microwave.gd" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(277, 149)

[node name="Microwave" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, -2.5)
shape = SubResource("1")

[node name="Menu" type="CanvasLayer" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
transform = Transform2D(1.5, 0, 0, 1.5, 0, 0)

[node name="PanelContainer" type="PanelContainer" parent="Menu"]
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.333
anchor_right = 0.333
anchor_bottom = 0.333
offset_left = -100.0
offset_top = -100.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="1Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "1"
expand_icon = true

[node name="2Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "2"
expand_icon = true

[node name="3Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "3"
expand_icon = true

[node name="4Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "4"
expand_icon = true

[node name="5Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "5"
expand_icon = true

[node name="6Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "6"
expand_icon = true

[node name="7Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "7"
expand_icon = true

[node name="8Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "8"
expand_icon = true

[node name="9Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "9"
expand_icon = true

[node name="ClearButton" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Clear/Exit"
expand_icon = true

[node name="0Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "       0       "
expand_icon = true

[node name="BackButton" type="Button" parent="Menu/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "  Delete  "
expand_icon = true

[node name="StartButton" type="Button" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Start"
expand_icon = true

[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/1Button" to="." method="_on_1Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/2Button" to="." method="_on_2Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/3Button" to="." method="_on_3Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/4Button" to="." method="_on_4Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/5Button" to="." method="_on_5Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/6Button" to="." method="_on_6Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/7Button" to="." method="_on_7Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/8Button" to="." method="_on_8Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/9Button" to="." method="_on_9Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/0Button" to="." method="_on_0Button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/GridContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
